<resources>
    <string name="app_name">A.fume</string>
    <string name="apply">적용</string>
    <string name="delete">삭제</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="next">다음</string>
    <string name="perfume">향수</string>
    <string name="cancel">취소</string>
    <string name="etc">기타</string>
    <string name="complete">완료</string>
    <string name="confirm">확인</string>
    <string name="zero">0</string>
    <string name="filter">필터</string>
    <string name="report">신고</string>
    <string name="required">(필수 사항)</string>
    <string name="add">추가</string>
    <string name="edit_complete">수정 완료</string>
    <string name="check_duplicate">중복 확인</string>
    <string name="logout">로그아웃</string>
    <string name="setting">설정</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="hash_tag_format" formatted="false">#%s</string>
    <string name="chartPercentFormat" formatted="false">%d%%</string>
    <string name="percentage">%s</string>
    <string name="top_note">Top</string>
    <string name="middle_note">Middle</string>
    <string name="base_note">Base</string>
    <string name="single_note">Single</string>
    <string name="series">계열</string>
    <string name="brand">브랜드</string>
    <string name="keyword">키워드</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="my_perfume">마이 퍼퓸</string>
    <string name="wishlist">위시 리스트</string>
    <string name="do_report">신고하기</string>
    <string name="do_login">로그인 하기</string>
    <string name="do_signup">회원가입하기</string>
    <string name="write_note">시향 노트 쓰기</string>
    <string name="show_detail_product">상품 자세히 보기</string>
    <string name="show_more">더 보기</string>
    <string name="filter_max_5">카테고리 당 최대 5개까지 중복 선택 가능 합니다.</string>
    <string name="survey_question">회원가입을 축하합니다!\n어떤 향을 좋아하세요?</string>
    <string name="survey_desc">취향을 선택하고 나에게 맞는 향수를\n추천 받아보세요!</string>
    <string name="dialog_note_delete">정말로 삭제하실건가요?</string>
    <string name="dialog_note_save">수정된 내용이 있습니다.\n저장하시겠습니까?</string>
    <string name="go_to_login">로그인 후 사용해주세요</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="edit_password">비밀번호 변경</string>
    <string name="label_perfume_story">조향스토리.</string>
    <string name="label_keyword">키워드.</string>
    <string name="label_note">노트.</string>
    <string name="label_abundance_rate">부향률.</string>
    <string name="label_price">가격.</string>
    <string name="label_seasonal">계절감.</string>
    <string name="label_longevity">지속력.</string>
    <string name="label_sillage">잔향감.</string>
    <string name="label_gender">성별감.</string>
    <string name="similar_perfume_showing">지금 보는 향수와 비슷해요.</string>
    <string name="txt_for_new_added_perfume">매주 수요일마다 데이터가 갱신됩니다.</string>
    <string name="txt_enter_nickname">사용하실 닉네임을 입력해주세요.</string>
    <string name="txt_choose_gender">성별을 선택해주세요.</string>
    <string name="txt_choose_birth_year">출생연도를 선택해주세요.</string>
    <string name="txt_enter_email_address">이메일 주소를 입력해주세요.</string>
    <string name="txt_enter_password">비밀번호를 입력해주세요.</string>
    <string name="dialog_login">로그인 후 사용 가능합니다.\n로그인을 해주세요.</string>
    <string name="message_if_no_account">혹시 계정이 없으신가요?</string>
    <string name="complete_signup">가입 완료</string>
    <string name="error_invalid_id_or_password">입력된 아이디 또는 비밀번호가 올바르지 않습니다.</string>
    <string name="error_check_password_again">비밀번호를 다시 확인해주세요.</string>
    <string name="hint_email">Afume@kakao.com</string>
    <string name="example_nickname">예) 어퓸덕후</string>
    <string name="txt_my_perfume_null">아직 시향 노트가 비어 있어요. 그동안 사용했던 향수 혹은 시향해봤던 향수를 기록해보세요.</string>
    <string name="txt_wish_list_null">아직 시향해보고 싶은 향수가 없군요! \n평소에 관심 있었던 향수를 \n 위시리스트에 추가해보세요!</string>
    <string name="txt_enter_current_password">현재 비밀번호를 입력해주세요.</string>
    <string name="txt_enter_more_than_four">4자리 이상 입력해주세요.</string>
    <string name="txt_check_identification">본인 확인</string>
    <string name="txt_enter_new_password">변경할 비밀번호를 입력해주세요.</string>
    <string name="enter_password_again">위의 비밀번호를 다시 한 번 입력해주세요.</string>
    <string name="txt_be_careful_mistake_password">틀리지 않도록 주의해주세요.</string>
    <string name="txt_error_password_inconsistency">위의 비밀번호와 똑같이 입력해주세요</string>
    <string name="txt_search">무엇을 찾으시나요?</string>
    <string name="txt_search_hint">브랜드 혹은 제품명을 검색해주세요.</string>
    <string name="txtl_for_write_note">향을 오래 기억할 수 있도록 기록해볼까요?</string>
    <string name="label_note_score">별점.</string>
    <string name="label_for_note_contents">향에 대한 기록.</string>
    <string name="label_for_note_content">향을 자유롭게 표현해보세요.\n\n</string>
    <string name="label_for_note_keyword">향에 대한 키워드.</string>
    <string name="longevity_very_weak_two_line">매우\n약함</string>
    <string name="longevity_very_weak">매우 약함</string>
    <string name="longevity_weak">약함</string>
    <string name="longevity_usual">보통</string>
    <string name="longevity_strong">강함</string>
    <string name="longevity_very_strong_two_line">매우\n강함</string>
    <string name="silalge_light">가벼움</string>
    <string name="sillage_usual">보통</string>
    <string name="silalge_heavy">무거움</string>
    <string name="seasonal">계절감</string>
    <string name="spring">봄</string>
    <string name="summer">여름</string>
    <string name="fall">가을</string>
    <string name="winter">겨울</string>
    <string name="gender">성별</string>
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>
    <string name="gender_neuter">중성</string>
    <string name="txt_for_make_public">다른 분들과 향에 대한 기록을 공유해보세요.\n나의 시향 노트를 공개하시겠습니까?</string>
    <string name="note_complete">기록 완료</string>
    <string name="txt_home_title"> 님을 위한\n향수 추천</string>
    <string name="txt_home_age">이\n많이 찾는 향수</string>
    <string name="txt_home_subtitle"> 님 연령대 분들에게 인기 많은 향수 입니다.</string>
    <string name="txt_home_title_null">당신을 위한\n향수 추천</string>
    <string name="txt_home_age_null">20대 여성이\n많이 찾는 향수</string>
    <string name="txt_home_subtitle_null">20대 분들에게 인기 많은 향수 입니다.</string>
    <string name="txt_detail_note_list_empty">아직 등록된 시향노트가 없어요 :)\n이 향수의 첫번째 시향 노트를 작성해보세요!</string>
    <string name="txt_list_empty"> %1$s 리스트를 불러오지 못했어요.\n 잠시 후 다시 시도해주세요.</string>
    <string name="txt_privacy"><u>개인정보수집 및 이용동의 (필수)</u></string>
    <string name="afume_home_subtitle">더욱 즐거운 향수 라이프의 시작</string>
    <string name="txt_stay_tuned_for_perfume_updates">기대하세요. 새로운 향수가 업데이트 됩니다.</string>
    <string name="txt_for_recommend_list">어퓸을 사용할수록\n더 잘 맞는 향수를 보여드려요</string>
    <string name="txt_for_latest_viewed_perfume">최근 찾아본 향수</string>
    <string name="txt_for_new_added_perfume_list">새로\n등록된 향수</string>
    <string name="txt_advertising_and_publicity">광고, 홍보</string>
    <string name="txt_profanity_and_obscene">욕설, 음란어 사용</string>
    <string name="txt_excessive_typos_and_repetitive_use">과도한 오타, 반복적 사용</string>
    <string name="txt_exposure_personal_information">개인정보 노출</string>
    <string name="txt_irrelevant_with_product">제품과 무관한 내용</string>
    <string name="txt_defamation_and_copyright_infringement">명예 훼손, 저작권 침해</string>
    <string name="action_back">뒤로가기</string>
</resources>