<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.afume.afume_android.ui.detail.PerfumeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:text="@string/txt_advertising_and_publicity"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_review_report"
            android:layout_width="30dp"
            android:layout_height="364dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_1_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_2_swear_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_3_typo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_4_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_5_irrelevant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_6_cyberlivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_7_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            app:srcCompat="@color/light_gray_f0" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_profanity_and_obscene"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/textView30"
            app:layout_constraintTop_toBottomOf="@+id/imageView30" />

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            app:srcCompat="@color/light_gray_f0" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:text="@string/txt_excessive_typos_and_repetitive_use"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/imageView32" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32"
            app:srcCompat="@color/light_gray_f0" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:text="@string/txt_exposure_personal_information"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/imageView33" />

        <View
            android:id="@+id/imageView34"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="@color/light_gray_f0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:text="@string/txt_irrelevant_with_product"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@+id/imageView34" />

        <View
            android:id="@+id/imageView35"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="@color/light_gray_f0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35"/>

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:text="@string/txt_defamation_and_copyright_infringement"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/imageView35" />

        <View
            android:id="@+id/imageView36"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="@color/light_gray_f0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/etc"
            android:fontFamily="@font/notosans_regular"
            android:includeFontPadding="false"
            android:textColor="@color/primary_black"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/imageView36" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_report_dialog_no"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="33dp"
            android:backgroundTint="@color/gray_cd"
            android:fontFamily="@font/notosans_bold"
            android:includeFontPadding="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_report_dialog_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_report_dialog_yes"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:background="@drawable/selector_declare_yes"
            android:enabled="false"
            android:fontFamily="@font/notosans_bold"
            android:includeFontPadding="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/do_report"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_report_dialog_no"
            app:layout_constraintTop_toTopOf="@+id/btn_report_dialog_no" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>