<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.afume.afume_android.ui.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.signup.SignUpGenderActivity">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickBackBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btn_back"
            android:contentDescription="@string/action_back" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:fontFamily="@font/nanummyeongjo_extrabold"
            android:textSize="18dp"
            android:includeFontPadding="false"
            android:textColor="@color/primary_black"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="91dp"
            android:text="@string/txt_choose_gender"
            android:fontFamily="@font/notosans_regular"
            android:textSize="14dp"
            android:includeFontPadding="false"
            android:textColor="@color/dark_gray_7d"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <View
            android:id="@+id/imageView24"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:background="@color/primary_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <ImageView
            android:id="@+id/img_sign_up_gender_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> viewModel.onClickManBtn()}"
            setManIcon="@{viewModel.isCheckMan}"
            app:layout_constraintEnd_toStartOf="@+id/imageView26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView24"
            android:contentDescription="@string/man" />

        <TextView
            android:id="@+id/txt_sign_up_gender_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:includeFontPadding="false"
            android:text="@string/man"
            setGenderFont="@{viewModel.isCheckMan}"
            android:textSize="15dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_sign_up_gender_man" />

        <View
            android:id="@+id/imageView26"
            android:layout_width="1dp"
            android:layout_height="126dp"
            android:layout_marginTop="18dp"
            android:background="@color/primary_black"
            app:layout_constraintEnd_toStartOf="@+id/img_sign_up_gender_woman"
            app:layout_constraintStart_toEndOf="@+id/img_sign_up_gender_man"
            app:layout_constraintTop_toBottomOf="@+id/imageView24"/>

        <ImageView
            android:id="@+id/img_sign_up_gender_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> viewModel.onClickWomanBtn()}"
            android:contentDescription="@string/woman"
            setWomanIcon="@{viewModel.isCheckWoman}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView26"
            app:layout_constraintTop_toBottomOf="@+id/imageView24" />

        <TextView
            android:id="@+id/txt_sign_up_gender_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/woman"
            android:textSize="15dp"
            android:includeFontPadding="false"
            setGenderFont="@{viewModel.isCheckWoman}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView26"
            app:layout_constraintTop_toBottomOf="@+id/img_sign_up_gender_woman" />

        <View
            android:id="@+id/imageView28"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="26dp"
            android:background="@color/primary_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView26"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sign_up_gender"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/primary_black"
            android:visibility="@{viewModel.genderNextBtn? View.VISIBLE : View.INVISIBLE}"
            android:onClick="onClickNextBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_sign_up_gender"
                app:layout_constraintEnd_toEndOf="@+id/cl_sign_up_gender"
                app:layout_constraintTop_toTopOf="@+id/cl_sign_up_gender"
                app:srcCompat="@drawable/btn_next"
                android:contentDescription="@string/next" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/next"
                android:fontFamily="@font/notosans_bold"
                android:textSize="15dp"
                android:includeFontPadding="false"
                android:textColor="@color/white_85"
                app:layout_constraintBottom_toBottomOf="@+id/cl_sign_up_gender"
                app:layout_constraintEnd_toStartOf="@+id/imageView25"
                app:layout_constraintTop_toTopOf="@+id/cl_sign_up_gender" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>